# AAI-520-NLP-Project

./: AAI-520-Final Team Project Status Update Form-.docx  Agentic AI for Investment Market Research.docx  README.md
TechnicalReport/: report-final.txt
project-code/: readme.md  requirements.txt  server.py  test-server.py
project-code/agentic-mcp-rag/: server_mcp.py
project-code/langgraph-claude/: claude_desktop-config.json  msft_analysis.md  pyproject.toml  server_mcp_langgraph.py  visualize_workflow_5_code.py  workflow_log.jsonl
project-code/mcp/: Readme.md  mcp_server_analysis_summary.md  msft_analysis_data.md  msft_analysis_methods.md  news.py  output-2.md  output-3  output-3.md  output-with-all-methods.md  output.md  pyproject.toml  server_mcp-plain.py  server_mcp.py  server_mcp.py-full-function-working  server_mcp.py-langchain-working  server_mcp_langgraph.py
project-code/mcp-agentic-code/: pyproject.toml  server_mcp.py.old
submit-artifacts/: AAI-520-Team-1-server_mcp.py  Project-Readme.md  readme.md  server_mcp.py
submit-artifacts/final-submission/: 1  AAI_520_Team_1-server-agentic-ai-mcp-server-rag-investment-research.py  pyproject.toml
