[project]
name = "investment-mcp-server"
version = "0.1.0"
description = "MCP server for investment analysis with Flan-T5 and FinBERT"
authors = [{ name = "You", email = "you@example.com" }]
requires-python = ">=3.11"

dependencies = [
    "yfinance",
    "transformers",
    "torch",
    "fastmcp",
    "pytoml",
    "feedparser>=6.0.10",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]

